(alias
 (name default)
 (deps ./src/bin/yaacs_server.exe
       (source_tree src/gui/js_client)
       (file src/gui/js_client/js-libs/semantic.min.js)
       )
 
 (action
  (progn     
    (bash "cp ./src/bin/yaacs_server.exe ../../yaacs_server ")
;    (bash "rm -f srv")
;    (bash "ln -s ../../../../_build/default/src/gui/js_client/js-libs/semantic.min.js ../../src/gui/js_client/js-libs/")
 )))

(alias
 (name readme)
 (deps (file README.org))
 (action (progn
           (bash "emacs README.org --load ~/.emacs.d/init.el --batch -f org-md-export-to-markdown")
           (bash "cp ./README.md ../../README.md")))
 )



