(alias
 (name default)
 (deps ./src/bin/yaacs_server.exe )
 
 (action
  (progn     
    (bash "cp ./src/bin/yaacs_server.exe ../../yaacs_server ")
    )))

(alias
 (name readme)
 (deps (file README.org))
 (action (progn
           (bash "emacs README.org --load ~/.emacs.d/init.el --batch -f org-md-export-to-markdown")
           (bash "cp ./README.md ../../README.md")))
 )



(alias
 (name publish)
 (deps ./src/bin/yaacs_server.exe
       (source_tree ./src/gui/js_client))
 (action
  (progn
;    (bash "scp -P 51460 src/bin/yaacs_server.exe 91.121.50.14:yaacs_server")
;    (bash "scp -P 51460 -r src/gui/js_client 91.121.50.14:./srv")
    (bash "rsync -ae 'ssh -p 51460' src/bin/yaacs_server.exe 91.121.50.14:yaacs_server")
    (bash "rsync -ae 'ssh -p 51460' src/gui/js_client 91.121.50.14:srv")
    )
  )
 )


