(alias
 (name default)
 (deps ./src/bin/yaacs_server.exe
       (glob_files src/gui/js_client/*)
       (glob_files src/gui/js_client/molbuilder/*)
       (glob_files src/gui/js_client/sandbox/*)
       (glob_files src/gui/js_client/simulator/*)
       )
 
 (action
  (progn     
    (bash "cp ./src/bin/yaacs_server.exe ../../yaacs_server ")
    (run tar -xf src/gui/js_client/libs.tar -C src/gui/js_client)
    ))
)

(alias
 (name scenarios)
 (deps ./src/bin/scenario1.exe
       ./src/bin/scenario2.exe
       ./src/bin/scenario3.exe)
 )

(alias
 (name readme)
 (deps (file README.org))
 (action (progn
           (bash "emacs README.org --load ~/.emacs.d/init.el --batch -f org-md-export-to-markdown")
           (bash "cp ./README.md ../../README.md")))
 )


(alias
 (name init_ssh)
 (action (progn
           (bash "ssh-keygen -t rsa -b 1024 -C sapristi@artlife.ml")
           (bash "ssh-copy-id -i ~/.ssh/id_rsa.pub artlife.ml -p 51460")
           )))

(alias
 (name publish)
 (deps ./src/bin/yaacs_server.exe
       (source_tree ./src/gui/js_client)
       (alias default))
 (action
  (progn
    (echo "stopping running server")
    (bash "ssh -p 51460 91.121.50.14 'killall yaacs_server || true'")
    (echo "syncing files")
    (bash "rsync -ae 'ssh -p 51460' src/bin/yaacs_server.exe 91.121.50.14:yaacs_server ")
    (bash "rsync -ae 'ssh -p 51460' src/gui/js_client 91.121.50.14:srv")
    (echo "launching server again")
    (bash "ssh -p 51460 artlife.ml 'screen -S server -d -m ./yaacs_server -port 51461 -srv srv -host artlife.ml'")
    (echo "done")
    )
  )
 )


