[project]
name = "alife"
version = "0.1"
description = ""
authors = [
    {name = "Mathias Millet", email = "mathias@mmill.eu"},
]
dependencies = [
    "django>=4.2.7",
    "django-click>=2.3.0",
    "django-admin-extra-buttons>=1.5.6",
    "djangorestframework>=3.14.0",
    "django-extensions>=3.2.3",
    "django-bulma>=0.8.3",
    "setuptools>=68.2.2",
    "typer>=0.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPLV3"}

[tool.pdm.dev-dependencies]
dev = [
    "django-types>=0.19.1",
    "ipython>=8.17.2",
    "litecli>=1.9.0",
]

[tool.pdm.scripts]
manage.cmd = "./manage.py"
cli.cmd = "./cli.py"

[tool.pdm.options]
add = ["--no-self"]
install = ["--no-self"]
sync = ["--no-self"]
lock = ["--no-cross-platform"]