(alias
 (name default)
 (deps
   ./bin/yaac.exe
 )


 )

(rule
 (alias default)
 (deps
   ./bin/yaac.exe
 )
 (action
  (progn
   (bash "rm -f ../../../django/yaac")
   (bash "cp ./bin/yaac.exe ../../../django/yaac")
 ))
)

; (rule
;  (alias client)
;  (targets client.tar)
;  (mode fallback)
;  (deps
;   (glob_files src/gui/client/*.re)
;   (glob_files src/gui/client/components/*.re)
;   (glob_files src/gui/client/cytoscape/*.re)
;   (glob_files src/gui/client/cytoscape/cytoscape_utils.js)
;   (glob_files src/gui/client/logs/*.re)
;   (glob_files src/gui/client/molbuilder/*.re)
;   (glob_files src/gui/client/sandbox/*.re)
;   (glob_files src/gui/client/sandbox/generic_controls/*.re)
;   (glob_files src/gui/client/static/*)
;   (glob_files src/gui/client/store/*.re)
;   (glob_files src/gui/client/utils/*.re)
;   (glob_files src/gui/client/tests/*.re)
;   (glob_files src/base_chemistry/types/*.ml)
;   (file bsconfig.json)
;   (file package.json)
;   (file yarn.lock)
;   (file webpack.config.js)
;  )
;  (action
;   (progn
;    (run yarn install)
;    (run bsb -make-world)
;    (run yarn dist)
;    (run tar -cf client.tar -C dist .)
;  ))
; )

; (rule
;  (alias install_local)
;  (deps
;   (file src/bin/yaacs_server.exe)
;   (file client.tar)
;   (glob_files data/dump/*)
;  )
;  (action
;   (progn
;    (bash "rm -rf ../../dist")
;    (bash "mkdir -p ../../dist/client")
;    (bash "cp ./src/bin/yaacs_server.exe ../../dist/yaacs_server ")
;    (bash "tar -xf client.tar -C ../../dist/client")
;    (bash "cp -r ./data ../../dist/data ")
;  ))
; )

; (rule
;  (alias install_server_local)
;  (deps
;   (file src/bin/yaacs_server.exe)
;   (glob_files data/bact_states/*)
;  )
;  (action
;   (progn
;    (bash "rm  ../../dist/yaacs_server ")
;    (bash "cp ./src/bin/yaacs_server.exe ../../dist/yaacs_server ")
;    (bash "rm -r ../../dist/data ")
;    (bash "cp -r ./data ../../dist/data ")
;  ))
; )

; ; (alias
; ;  (name scenarios)
; ;  (deps ./src/bin/scenario1.exe
; ;        ./src/bin/scenario2.exe
; ;        ./src/bin/scenario3.exe
; ;        ./src/bin/scenario4.exe)
; ;  )

; ; (rule
; ;  (alias readme)
; ;  (target README.md)
; ;  (deps (file README.org))
; ;  (action
; ;   (progn
; ;    (bash "emacs README.org --load ~/.emacs.d/init.el --batch -f org-md-export-to-markdown")
; ;    (bash "cp ./README.md ../../README.md")))
; ; )


; ; (alias
; ;  (name publish)
; ;  (deps ./src/bin/yaacs_server.exe
; ;   (source_tree ./src/gui/js_client)
; ;   (alias default))
; ;  (action
; ;   (progn
; ;    (echo "stopping running server")
; ;    (bash "ssh -p 51460 91.121.50.14 'killall yaacs_server || true'")
; ;    (echo "syncing files")
; ;    (bash "rsync -ae 'ssh -p 51460' src/bin/yaacs_server.exe 91.121.50.14:yaacs_server ")
; ;    (bash "rsync -ae 'ssh -p 51460' src/gui/js_client 91.121.50.14:srv")
; ;    (echo "launching server again")
; ;    (bash "ssh -p 51460 artlife.ml 'screen -S server -d -m ./yaacs_server -port 51461 -srv srv -host artlife.ml'")
; ;    (echo "done")
; ;   )
; ;  )
; ; )
