(library
 (name base_chemistry)
 (flags (-w -g))
 (inline_tests (flags (-verbose)))
 (preprocess
  (pps ppx_deriving.show
       ppx_deriving.ord
       ppx_deriving.eq
       ppx_deriving_yojson
       ppx_inline_test
       ppx_expect
 ))
 (libraries
   local_libs
   ppx_deriving_yojson
   easy_logging_yojson
   re
   str
   ppx_deriving.show
   ppx_deriving.ord)
)
