(library
 (name base_chemistry)
 (flags (-w -g))
 (preprocess
  (pps ppx_deriving.show
       ppx_deriving.ord
       ppx_deriving_yojson))
 (libraries chemistry_types
            local_libs
            ppx_deriving_yojson
            easy_logging_yojson
            re
            str
            ppx_deriving.show
            ppx_deriving.ord))
